[package]
name = "bin-ts"
version = "0.1.0"
edition = "2021"
authors = ["Andrey v. Kononov"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "~1.0.119"
serde_json = "~1.0.61"
exitfailure = "~0.5.1"
reqwest = { version = "~0.11.0", features = ["json"] }
serde_derive = "~1.0.119"
tokio = { version = "~1.0.2", features = ["full"] }